2011-03-18  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Instance/Documentation/texi.make (internal-textdoc-install_):
	Only install GNUSTEP_INSTANCE if the file exists.  If not, print
	the message " Nothing to install because nothing was built
	(usually because makeinfo is not available)" instead of aborting.
	* messages.make (ALWAYS_ECHO_NO_LANGUAGES): New variable.	
	
2011-03-18  Nicola Pero  <nicola.pero@meta-innovation.com>

	* configure.ac: By default, use --enable-absolute-install-paths on
	Darwin with gnu-gnu-gnu (Suggestion from Wolfgang Lux
	<wolfgang.lux@gmail.com>).
	* configure: Regenerated.
	
2011-03-16  Nicola Pero  <nicola.pero@meta-innovation.com>

	* config.make.in (CXX): If CXX is specified on the environment or
	command-line, use the specified value in preference to the one
	hardcoded into gnustep-make (From a suggestion by Banlu Kemiyatorn
	<object@gmail.com>).

2011-03-16  Nicola Pero  <nicola.pero@meta-innovation.com>

	* GNUmakefile.in (rpm): Depend on svn-dist and updated
	location of .tar.gz file to copy.
	* gnustep-make.spec.in (CFLAGS): Added --with-layout=gnustep
	to configure command.
	(%files): Added /etc/GNUstep/GNUstep.conf.

2011-03-16  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Documentation/gnustep-filesystem.texi: Updated documentation for
	change in default filesystem layout and configuration file
	location.
	* Documentation/gnustep-howto.texi: Same change.
	* Documentation/install.texi: Same change.
	* Documentation/gnustep-make.texi (GNUSTEP_INSTALLATION_DOMAIN):
	Updated explanation of this variable.
	* Documentation/gnustep-userfaq.texi (No Makefile): Updated
	location of GNUstep.sh.
	* INSTALL: Regenerated.
	
2011-03-14  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Instance/gswapp.make (GNUSTEP_GSWAPPS): Variable removed.
	This was deprecated on 2007-03.
	* Instance/resource-set.make: Removed support for
	xxx_RESOURCE_FILES_INSTALL_DIR.  This was deprecated on 2007-02.